# LP/api/index.js
@@ -1,7 +1,9 @@
 const authRoutes = require("./users/auth_routes");
 const userRoutes = require("./users");
+const todoRoutes=require("./todo")
 
 exports.startApp = (app) => {
     app.use("/auth", authRoutes);
     app.use("/users", userRoutes);
+    app.use("/todo", todoRoutes);
 }
