# LP/api/todo/index.js
@@ -1,0 +1,14 @@
+const express = require("express");
+const isAuth=require("../../middlewares/isAuth")
+
+const todoControllers = require("./todo_Controller");
+
+const router = express.Router();
+
+router
+  .route("/")
+  .post(todoControllers.createTodo)
+  .get(todoControllers.fetchAllTodoItems);
+
+router.route("/user").get(isAuth, todoControllers.fetchUserTodos)
+module.exports = router;
